feat: implement request and start survey URL

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,17 @@ NEXT_PUBLIC_BASE_URL=
 
 # Optional: Set the dev mode ("true" or "false"). Default to "false".
 NEXT_PUBLIC_DEV_MODE=false
+
+# ------ Survey ------
+
+# Required: Set the Verida DID of this survey application, it will be displayed to the user in the Verida Vault as the requester when starting the survey
+NEXT_PUBLIC_SURVEY_APPLICATION_VERIDA_DID=
+
+# Required: Set the Verida Vault base URL
+NEXT_PUBLIC_VERIDA_VAULT_BASE_URL=https://app.verida.ai
+
+# Required: Set the URL of the endpoint expected to receive the survey data. This endpoint will encrypt and store the data in Nillion DBs
+NEXT_PUBLIC_DATA_PROCESSING_ENDPOINT_URL==
+
+# Required: Set the ID of the survey data schema in Nillion DBs
+NEXT_PUBLIC_SURVEY_DATA_SCHEMA_ID=
